@@ -23,6 +23,10 @@
     ['Maximize', 'ShowBlocks','-','About']
 ]
   </property>
+  <property name="extraAllowedContent" type="text">
+      /* Add array of allowedContent rules */
+      []
+  </property>
   <property name="menuStyles" type="text">
 [
   /* Block Styles */
